[MOSIP-750] ID authentication automation

--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -1,4 +1,3 @@
-
 ---
 # Global variables - accessed by different roles and plays
 #
@@ -6,6 +5,8 @@
 ansible_python_interpreter: /usr/bin/python2  # Python3 will be best to use with CentOS 8
 
 artifactory_uri: 'http://13.71.87.138:8040'
+
+ansible_sudo_pass: puneet
 
 info_email_address: info@mosip.io  # Used in generating letsencrypt certificates
 
@@ -25,7 +26,7 @@ ingress_nodeport_https: 30443
 ingress_base_url: 'http://{{mz_cluster_any_node}}:{{ingress_nodeport_http}}'
 
 
-sandbox_domain_name: test-sandbox.southindia.cloudapp.azure.com
+sandbox_domain_name: mosip-tf.technoforte.co.in
 sandbox_public_url: 'https://{{sandbox_domain_name}}'
 
 mz_persistent_storage_node: mzworker0  # All persistent data in MZ will be stored on this node
