--- a/deployment/sandbox-v2/group_vars/console.yml
+++ b/deployment/sandbox-v2/group_vars/console.yml
@@ -8,3 +8,4 @@ logs_dir: '/tmp/'
 commons_repo_location: '{{lookup("env",  "HOME")}}/commons'
 prereg_repo_location: '{{lookup("env",  "HOME")}}/pre-registration'
 regproc_repo_location: '{{lookup("env",  "HOME")}}/registration'
+ida_repo_location: '{{lookup("env",  "HOME")}}/id-authentication'
