--- a/deployment/sandbox-v2/hosts.ini
+++ b/deployment/sandbox-v2/hosts.ini
@@ -1,9 +1,9 @@
 [console]
-console ansible_user=mosipuser
+console ansible_user=puneet
 
 # On public facing machine
 [nginxserver]
-console ansible_user=mosipuser  
+console ansible_user=puneet  
 
 # All k8s clusters
 [clusters:children]  
