--- a/deployment/sandbox-v2/roles/config-server/files/properties/id-authentication-qa.properties
+++ b/deployment/sandbox-v2/roles/config-server/files/properties/id-authentication-qa.properties
@@ -1,17 +1,17 @@
 ##################### Dynamic Properties - this may change for different deployemnts ##############################
 # Database hostname
-mosip.ida.database.hostname=172.16.17.4
+mosip.ida.database.hostname=postgres
 # Database port
-mosip.ida.database.port=9001
+mosip.ida.database.port=80
 # Database user
 mosip.ida.database.user=idauser
 # Database password (encrypted)
 mosip.ida.database.password=Mosip@dev123
 
 # Kernel auth client ID for IDA
-mosip.ida.auth.clientId=
+mosip.ida.auth.clientId=mosip-ida-client
 # Kernel auth secret key for IDA
-mosip.ida.auth.secretKey=
+mosip.ida.auth.secretKey=abc123
 # Kernel auth application ID for IDA
 mosip.ida.auth.appId=ida
 
@@ -44,7 +44,7 @@ spring.datasource.initialization-mode=never
 
 
 #Swagger
-swagger.base-url=${mosip.base.url}
+#swagger.base-url=${mosip.base.url}
 application.env.local=false
 
 #TODO Temporary config for actuator. To be removed in production.
@@ -87,11 +87,21 @@ ida.mapping.property.source=url:${mosip.ida.mapping.json-uri}
 
 
 
-#-------Bio SDK Integration ------------------------
-ida.fingerprint.provider=ai.tech5.auth.service.T5AuthSDK
-ida.face.provider=ai.tech5.auth.service.T5AuthSDK
-ida.iris.provider=ai.tech5.auth.service.T5AuthSDK
-ida.composite.biometric.provider=ai.tech5.auth.service.T5AuthSDK
+#-------Real Bio SDK Integration ------------------------
+#ida.fingerprint.provider=ai.tech5.auth.service.T5AuthSDK
+#ida.face.provider=ai.tech5.auth.service.T5AuthSDK
+#ida.iris.provider=ai.tech5.auth.service.T5AuthSDK
+#ida.composite.biometric.provider=ai.tech5.auth.service.T5AuthSDK
+
+#-------Proxy Bio SDK Integration ------------------------
+
+ida.fingerprint.provider=io.mosip.kernel.bioapi.impl.BioApiImpl
+
+ida.face.provider=io.mosip.kernel.bioapi.impl.BioApiImpl
+
+ida.iris.provider=io.mosip.kernel.bioapi.impl.BioApiImpl
+
+ida.composite.biometric.provider=io.mosip.kernel.bioapi.impl.BioApiImpl
 
 #---------------------------------ID-Authentication Salt Generator---------------------------------------------------#
 mosip.authentication.salt-generator.start-sequence=0
@@ -104,7 +114,7 @@ mosip.kernel.salt-generator.schemaName=${javax.persistence.jdbc.schema}
 
 # *********** REST-services *****************
 # Kernel-Audit
-audit.rest.uri=${mosip.base.url}/v1/auditmanager/audits
+audit.rest.uri=http://kernel-auditmanager-service/v1/auditmanager/audits
 audit.rest.httpMethod=POST
 audit.rest.headers.mediaType=${mosip.ida.request.mediaType}
 #In seconds
@@ -112,129 +122,129 @@ audit.rest.timeout=${mosip.ida.request.timeout.secs}
 
 
 # Kernel OTP Validator
-otp-validate.rest.uri=${mosip.base.url}/v1/otpmanager/otp/validate
+otp-validate.rest.uri=http://kernel-otpmanager-service/v1/otpmanager/otp/validate
 otp-validate.rest.httpMethod=GET
 otp-validate.rest.headers.mediaType=${mosip.ida.request.mediaType}
 otp-validate.rest.timeout=${mosip.ida.request.timeout.secs}
 
 
 # Kernel OTP Generator
-otp-generate.rest.uri=${mosip.base.url}/v1/authmanager/authenticate/sendotp
+otp-generate.rest.uri=http://kernel-auth-service/v1/authmanager/authenticate/sendotp
 otp-generate.rest.httpMethod=POST
 otp-generate.rest.headers.mediaType=${mosip.ida.request.mediaType}
 otp-generate.rest.timeout=${mosip.ida.request.timeout.secs}
 
 
 # Kernel Id Repo Service rest api-GET
-id-repo-service.rest.uri=${mosip.base.url}/idrepository/v1/identity/uin/{uin}?type={type}
+id-repo-service.rest.uri=http://id-repository-identity-service/idrepository/v1/identity/uin/{uin}?type={type}
 id-repo-service.rest.httpMethod=GET
 id-repo-service.rest.headers.mediaType=${mosip.ida.request.mediaType}
 id-repo-service.rest.timeout=${mosip.ida.request.timeout.secs}
 
 # Kernel Id Repo Service Auth rest api-GET
-id-repo-service-auth.rest.uri=${mosip.base.url}/idrepository/v1/identity/uin/{uin}
+id-repo-service-auth.rest.uri=http://id-repository-identity-service/idrepository/v1/identity/uin/{uin}
 id-repo-service-auth.rest.httpMethod=GET
 id-repo-service-auth.rest.headers.mediaType=${mosip.ida.request.mediaType}
 id-repo-service-auth.rest.timeout=${mosip.ida.request.timeout.secs}
 
 # Mail Notification
-mail-notification.rest.uri=${mosip.base.url}/v1/emailnotifier/email/send
+mail-notification.rest.uri=http://kernel-emailnotification-service/v1/emailnotifier/email/send
 mail-notification.rest.httpMethod=POST
 mail-notification.rest.headers.mediaType=multipart/form-data
 mail-notification.rest.timeout=${mosip.ida.request.timeout.secs}
 
 # SMS Notification
-sms-notification.rest.uri=${mosip.base.url}/v1/smsnotifier/sms/send
+sms-notification.rest.uri=http://kernel-smsnotification-service/v1/smsnotifier/sms/send
 sms-notification.rest.httpMethod=POST
 sms-notification.rest.headers.mediaType=${mosip.ida.request.mediaType}
 sms-notification.rest.timeout=${mosip.ida.request.timeout.secs}
 
 #Master Data - Template Single Language
-id-masterdata-template-service.rest.uri=${mosip.base.url}/v1/masterdata/templates/{langcode}/{templatetypecode}
+id-masterdata-template-service.rest.uri=http://kernel-masterdata-service/v1/masterdata/templates/{langcode}/{templatetypecode}
 id-masterdata-template-service.rest.httpMethod=GET
 id-masterdata-template-service.rest.headers.mediaType=${mosip.ida.request.mediaType}
 id-masterdata-template-service.rest.timeout=${mosip.ida.request.timeout.secs}
 
 #Master Data - Template Multi language
-id-masterdata-template-service-multilang.rest.uri=${mosip.base.url}/v1/masterdata/templates/templatetypecodes/{code}
+id-masterdata-template-service-multilang.rest.uri=http://kernel-masterdata-service/v1/masterdata/templates/templatetypecodes/{code}
 id-masterdata-template-service-multilang.rest.httpMethod=GET
 id-masterdata-template-service-multilang.rest.headers.mediaType=${mosip.ida.request.mediaType}
 id-masterdata-template-service-multilang.rest.timeout=${mosip.ida.request.timeout.secs}
 
 #Master Data - Device verification Service
-device-verification-service.rest.uri=${mosip.base.url}/v1/masterdata/deviceprovidermanagement/validate
+device-verification-service.rest.uri=http://kernel-masterdata-service/v1/masterdata/deviceprovidermanagement/validate
 device-verification-service.rest.httpMethod=POST
 device-verification-service.rest.headers.mediaType=${mosip.ida.request.mediaType}
 device-verification-service.rest.timeout=${mosip.ida.request.timeout.secs}
 
 # Encryption Service
-encrypt-service.rest.uri=${mosip.base.url}/v1/cryptomanager/encrypt
+encrypt-service.rest.uri=http://kernel-cryptomanager-service/v1/cryptomanager/encrypt
 encrypt-service.rest.httpMethod=POST
 encrypt-service.rest.headers.mediaType=${mosip.ida.request.mediaType}
 encrypt-service.rest.timeout=${mosip.ida.request.timeout.secs}
 
 # Decryption Service
-decrypt-service.rest.uri=${mosip.base.url}/v1/cryptomanager/decrypt
+decrypt-service.rest.uri=http://kernel-cryptomanager-service/v1/cryptomanager/decrypt
 decrypt-service.rest.httpMethod=POST
 decrypt-service.rest.headers.mediaType=${mosip.ida.request.mediaType}
 decrypt-service.rest.timeout=${mosip.ida.request.timeout.secs}
 
 #USERID-RID-MAPPING#
-userid-rid.rest.uri=${mosip.base.url}/v1/authmanager/rid/{appId}/{uid}
+userid-rid.rest.uri=http://kernel-auth-service/v1/authmanager/rid/{appId}/{uid}
 userid-rid.rest.httpMethod=GET
 userid-rid.rest.headers.mediaType=${mosip.ida.request.mediaType}
 userid-rid.rest.timeout=${mosip.ida.request.timeout.secs}
 
 #RID-UIN-MAPPING#
-rid-uin.rest.uri=${mosip.base.url}/idrepository/v1/identity/rid/{rid}?type={type}
+rid-uin.rest.uri=http://id-repository-identity-service/idrepository/v1/identity/rid/{rid}?type={type}
 rid-uin.rest.httpMethod=GET
 rid-uin.rest.headers.mediaType=${mosip.ida.request.mediaType}
 rid-uin.rest.timeout=${mosip.ida.request.timeout.secs}
 
 #RID-UIN-MAPPING WITHOUT TYPE#
-rid-uin-auth.rest.uri=${mosip.base.url}/idrepository/v1/identity/rid/{rid}
+rid-uin-auth.rest.uri=http://id-repository-identity-service/idrepository/v1/identity/rid/{rid}
 rid-uin-auth.rest.httpMethod=GET
 rid-uin-auth.rest.headers.mediaType=${mosip.ida.request.mediaType}
 rid-uin-auth.rest.timeout=${mosip.ida.request.timeout.secs}
 #VID-UIN-MAPPING#
-vid-service.vid-uin.rest.uri=${mosip.base.url}/idrepository/v1/vid/{vid}
+vid-service.vid-uin.rest.uri=http://id-repository-vid-service/idrepository/v1/vid/{vid}
 vid-service.vid-uin.rest.httpMethod=GET
 vid-service.vid-uin.rest.headers.mediaType=${mosip.ida.request.mediaType}
 vid-service.vid-uin.rest.timeout=${mosip.ida.request.timeout.secs}
 
 #IDREPO-VID-UPDATESTATUS#
-id-repo-service-vidupdate-status.rest.uri=${mosip.base.url}/idrepository/v1/vid/{vid}
+id-repo-service-vidupdate-status.rest.uri=http://id-repository-vid-service/idrepository/v1/vid/{vid}
 id-repo-service-vidupdate-status.rest.httpMethod=PATCH
 id-repo-service-vidupdate-status.rest.headers.mediaType=${mosip.ida.request.mediaType}
 id-repo-service-vidupdate-status.rest.timeout=${mosip.ida.request.timeout.secs} 
 
 # Gender Type Service rest api-GET
-id-masterdata-gender-service.rest.uri=${mosip.base.url}/v1/masterdata/gendertypes
+id-masterdata-gender-service.rest.uri=http://kernel-masterdata-service/v1/masterdata/gendertypes
 id-masterdata-gender-service.rest.httpMethod=GET
 id-masterdata-gender-service.rest.headers.mediaType=${mosip.ida.request.mediaType}
 id-masterdata-gender-service.rest.timeout=${mosip.ida.request.timeout.secs}
 
 # Title Service rest api-GET
-id-masterdata-title-service.rest.uri=${mosip.base.url}/v1/masterdata/title
+id-masterdata-title-service.rest.uri=http://kernel-masterdata-service/v1/masterdata/title
 id-masterdata-title-service.rest.httpMethod=GET
 id-masterdata-title-service.rest.headers.mediaType=${mosip.ida.request.mediaType}
 id-masterdata-title-service.rest.timeout=${mosip.ida.request.timeout.secs}
 
 # TokeId Generator rest api-GET
-token-id-generator.rest.uri=${mosip.base.url}/v1/tokenidgenerator/{uin}/{partnercode}
+token-id-generator.rest.uri=http://kernel-tokenidgenerator-service/v1/tokenidgenerator/{uin}/{partnercode}
 token-id-generator.rest.httpMethod=GET
 token-id-generator.rest.headers.mediaType=${mosip.ida.request.mediaType}
 token-id-generator.rest.timeout=${mosip.ida.request.timeout.secs}
 
 #Auth token
-auth-token-generator.rest.uri=${mosip.base.url}/v1/authmanager/authenticate/clientidsecretkey
+auth-token-generator.rest.uri=http://kernel-auth-service/v1/authmanager/authenticate/clientidsecretkey
 auth-token-validator.rest.uri=${mosip.base.url}/v1/authmanager/authorize/validateToken
 auth-token-generator.rest.clientId=${mosip.ida.auth.clientId}
 auth-token-generator.rest.secretKey=${mosip.ida.auth.secretKey}
 auth-token-generator.rest.appId=${mosip.ida.auth.appId}
 
 #Digital Signature token
-digital-signature-sign-service.rest.uri=${mosip.base.url}/v1/signature/sign
+digital-signature-sign-service.rest.uri=http://kernel-signature-service/v1/signature/sign
 digital-signature-sign-service.rest.httpMethod=POST
 digital-signature-sign-service.rest.headers.mediaType=${mosip.ida.request.mediaType}
 digital-signature-sign-service.rest.timeout=${mosip.ida.request.timeout.secs}
