--- a/deployment/sandbox-v2/roles/config-server/files/properties/id-repository-qa.properties
+++ b/deployment/sandbox-v2/roles/config-server/files/properties/id-repository-qa.properties
@@ -1,16 +1,16 @@
 management.endpoint.restart.enabled=true
 
 #----------------------------------ID Repo dynamic properties----------------------------------------------#
-mosip.base.url=http://172.16.17.4
-mosip.idrepo.db.url=172.16.17.4
-mosip.idrepo.db.port=9001
+#mosip.base.url=http://172.16.17.4
+mosip.idrepo.db.url=postgres
+mosip.idrepo.db.port=80
 mosip.idrepo.db.identity.db-name=mosip_idrepo
 mosip.idrepo.db.identity.username=idrepouser
 mosip.idrepo.db.identity.password=Mosip@dev123
 mosip.idrepo.db.vid.db-name=mosip_idmap
 mosip.idrepo.db.vid.username=idmapuser
 mosip.idrepo.db.vid.password=Mosip@dev123
-mosip.idrepo.hdfs.username=idrepo-qa
+mosip.idrepo.hdfs.username=idrepo
 
 #----------------------------------ID Repo Service---------------------------------------------------------#
 application.id=id-repository
@@ -93,12 +93,12 @@ mosip.idrepo.vid.policy-schema-url=${mosip.kernel.idobjectvalidator.file-storage
 mosip.idrepo.vid.policy-file-url=${mosip.kernel.idobjectvalidator.file-storage-uri}mosip-vid-policy.json
 
 #----------------------------------REST-services ----------------------------------------------------------#
-mosip.idrepo.retrieve-by-uin.rest.uri=${mosip.base.url}/idrepository/v1/identity/uin/{uin}
+mosip.idrepo.retrieve-by-uin.rest.uri=http://id-repository-identity-service/idrepository/v1/identity/uin/{uin}
 mosip.idrepo.retrieve-by-uin.rest.httpMethod=GET
 mosip.idrepo.retrieve-by-uin.rest.headers.mediaType=application/json
 mosip.idrepo.retrieve-by-uin.rest.timeout=100
 
-mosip.idrepo.vid-generator.rest.uri=${mosip.base.url}/v1/vidgenerator/vid
+mosip.idrepo.vid-generator.rest.uri=http://id-repository-vid-service/v1/vidgenerator/vid
 mosip.idrepo.vid-generator.rest.httpMethod=GET
 mosip.idrepo.vid-generator.rest.headers.mediaType=application/json
 mosip.idrepo.vid-generator.rest.timeout=100
