--- a/deployment/sandbox-v2/roles/packages/helm/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/packages/helm/tasks/main.yml
@@ -15,7 +15,7 @@
       shell: "{{tmp_dir}}/get_helm.sh"
 
     - name: Init helm
-      shell: "helm init --client-only"
+      shell: "helm --kubeconfig {{kube_config}} init --client-only"
   when: helm_exists.rc > 0
  
 
