[MOSIP-750] Add nginx endpoints for ida

--- a/deployment/sandbox-v2/roles/config-server/files/properties/id-repository-qa.properties
+++ b/deployment/sandbox-v2/roles/config-server/files/properties/id-repository-qa.properties
@@ -1,7 +1,6 @@
 management.endpoint.restart.enabled=true
 
 #----------------------------------ID Repo dynamic properties----------------------------------------------#
-#mosip.base.url=http://172.16.17.4
 mosip.idrepo.db.url=postgres
 mosip.idrepo.db.port=80
 mosip.idrepo.db.identity.db-name=mosip_idrepo
@@ -50,16 +49,16 @@ mosip.kernel.idobjectvalidator.referenceValidator=io.mosip.kernel.idobjectvalida
 mosip.kernel.fsadapter.hdfs.user-name=${mosip.idrepo.hdfs.username}
 
 #----------------------------------REST-services ----------------------------------------------------------#
-mosip.idrepo.audit.rest.uri=${mosip.base.url}/v1/auditmanager/audits
+mosip.idrepo.audit.rest.uri=http://kernel-auditmanager-service/v1/auditmanager/audits
 mosip.idrepo.audit.rest.httpMethod=POST
 mosip.idrepo.audit.rest.headers.mediaType=application/json
 
-mosip.idrepo.encryptor.rest.uri=${mosip.base.url}/v1/cryptomanager/encrypt
+mosip.idrepo.encryptor.rest.uri=http://kernel-cryptomanager-service/v1/cryptomanager/encrypt
 mosip.idrepo.encryptor.rest.httpMethod=POST
 mosip.idrepo.encryptor.rest.headers.mediaType=application/json
 mosip.idrepo.encryptor.rest.timeout=100
 
-mosip.idrepo.decryptor.rest.uri=${mosip.base.url}/v1/cryptomanager/decrypt
+mosip.idrepo.decryptor.rest.uri=http://kernel-cryptomanager-service/v1/cryptomanager/decrypt
 mosip.idrepo.decryptor.rest.httpMethod=POST
 mosip.idrepo.decryptor.rest.headers.mediaType=application/json
 mosip.idrepo.decryptor.rest.timeout=100
