--- a/deployment/sandbox-v2/playbooks/cluster.yml
+++ b/deployment/sandbox-v2/playbooks/cluster.yml
@@ -1,35 +1,28 @@
 ---
-- hosts: dmzcluster
+- hosts: '{{cluster_name}}'
   become: yes
   gather_facts: yes
   roles:
     - { role: k8scluster/docker, tags: docker }
     - { role: packages/git, tags: git }
 
-- hosts: dmzmaster
+- hosts: '{{cluster_name[0]}}'  # Master 
   gather_facts: yes
   become: yes
   roles:
     - { role: k8scluster/kubernetes/master, tags: master }
     - { role: k8scluster/cni, tags: cni }
 
-- hosts: dmzworkers 
+- hosts: '{{cluster_name[0][1]}}' # Workers
   gather_facts: yes
   become: yes
   roles:
     - { role: k8scluster/kubernetes/node, tags: node }
 
-- hosts: dmzmaster
+- hosts: '{{cluster_name[0]}}'  # Master 
   gather_facts: yes
   become: yes
   tasks:
-    - name: "Helm role"
-      include_role:
-        name: k8scluster/helm
-      when: "additional_features.helm"
-      run_once: yes
-      tags: helm
-
     - name: "MetalLB role"
       include_role:
         name: k8scluster/metallb
