--- a/deployment/sandbox-v2/roles/packages/helm/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/packages/helm/tasks/main.yml
@@ -32,7 +32,7 @@
     wait_timeout: '{{docker_wait_time}}'
 
 - name: "Init Helm"
-  shell: "helm init --service-account tiller"
+  shell: "helm --kubeconfig {{kube_config}} init --service-account tiller"
 
 - name: "Update Helm repo"
   shell: "helm repo update"
