--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -10,6 +10,8 @@
 - import_playbook: playbooks/config-server.yml    
 - import_playbook: playbooks/mosip_kernel.yml
 - import_playbook: playbooks/mosip_prereg.yml
+- import_playbook: playbooks/mosip_ida.yml
+- import_playbook: playbooks/mosip_idrepo.yml
 - import_playbook: playbooks/mosip_regproc.yml
 - import_playbook: playbooks/nginx.yml
 
