--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -1,15 +1,13 @@
 # Master playbook
 #
 
-- import_playbook: playbooks/cluster.yml -e cluster_name=clusters[0] # MZ
-  when: clusters[0] is defined
-- import_playbook: playbooks/cluster.yml -e cluster_name=clusters[1] # DMZ
-  when: clusters[1] is defined
+- {import_playbook: playbooks/cluster.yml, vars: {cluster: mzcluster, master: mzmaster, workers: mzworkers}}
+- {import_playbook: playbooks/cluster.yml, vars: {cluster: dmzcluster, master: dmzmaster, workers: dmzworkers}}
 - import_playbook: playbooks/console.yml  # Basic setup on console machine
 - import_playbook: playbooks/mosip_env.yml # MOSIP DB, Keycloak, hdfs etc.
 - import_playbook: playbooks/config-server.yml    
 - import_playbook: playbooks/mosip_kernel.yml
 - import_playbook: playbooks/mosip_prereg.yml
-- import_playbook: playbooks/mosip_regproc.yml
+- import_playbook: playbooks/mosip_regprc.yml
 - import_playbook: playbooks/nginx.yml
 
