--- a/deployment/sandbox-v2/helm/charts/ingress-nginx/templates/ingress-init.yaml
+++ b/deployment/sandbox-v2/helm/charts/ingress-nginx/templates/ingress-init.yaml
@@ -12,8 +12,7 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   name: nginx-configuration
-  namespace: {{ .Values.ingress.namespace }} 
-  namespace: {{ .Values.ingress.namespace }} 
+  namespace: {{ .Values.namespace }} 
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
@@ -25,7 +24,7 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   name: tcp-services
-  namespace: {{ .Values.ingress.namespace }} 
+  namespace: {{ .Values.namespace }} 
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
@@ -35,7 +34,7 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   name: udp-services
-  namespace: {{ .Values.ingress.namespace }} 
+  namespace: {{ .Values.namespace }} 
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
@@ -45,7 +44,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: nginx-ingress-serviceaccount
-  namespace: {{ .Values.ingress.namespace }} 
+  namespace: {{ .Values.namespace }} 
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
@@ -113,7 +112,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: Role
 metadata:
   name: nginx-ingress-role
-  namespace: {{ .Values.ingress.namespace }} 
+  namespace: {{ .Values.namespace }} 
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
@@ -158,7 +157,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: RoleBinding
 metadata:
   name: nginx-ingress-role-nisa-binding
-  namespace: {{ .Values.ingress.namespace }} 
+  namespace: {{ .Values.namespace }} 
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
@@ -169,7 +168,7 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: nginx-ingress-serviceaccount
-    namespace: {{ .Values.ingress.namespace }} 
+    namespace: {{ .Values.namespace }} 
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
@@ -186,7 +185,7 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: nginx-ingress-serviceaccount
-    namespace: {{ .Values.ingress.namespace }} 
+    namespace: {{ .Values.namespace }} 
 
 ---
 
@@ -194,7 +193,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-ingress-controller
-  namespace: {{ .Values.ingress.namespace }} 
+  namespace: {{ .Values.namespace }} 
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
@@ -284,7 +283,7 @@ apiVersion: v1
 kind: LimitRange
 metadata:
   name: ingress-nginx
-  namespace: {{ .Values.ingress.namespace }} 
+  namespace: {{ .Values.namespace }} 
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
@@ -294,3 +293,29 @@ spec:
       memory: 90Mi
       cpu: 100m
     type: Container
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: ingress-nginx
+  namespace: {{ .Values.namespace }} 
+  labels:
+    app.kubernetes.io/name: ingress-nginx
+    app.kubernetes.io/part-of: ingress-nginx
+spec:
+  type: NodePort
+  ports:
+    - name: http
+      port: 80
+      targetPort: 80
+      protocol: TCP
+      nodePort: {{ .Values.nodePortHttp }}
+    - name: https
+      port: 443
+      targetPort: 443
+      protocol: TCP
+      nodePort: {{ .Values.nodePortHttps }} 
+  selector:
+    app.kubernetes.io/name: ingress-nginx
+    app.kubernetes.io/part-of: ingress-nginx
