--- a/deployment/sandbox-v2/helm/charts/kernel/templates/auth-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/auth-dep.yaml
@@ -1,17 +1,17 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Values.services.auth.name }} 
+  name: {{ .Values.services.auth.serviceName }} 
   namespace: {{ .Values.namespace }} 
   labels:
-    app: {{ .Values.services.auth.name }}
+    app: {{ .Values.services.auth.serviceName }}
     component: {{ .Values.component }} 
     
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: {{ .Values.services.auth.name }} 
+      app: {{ .Values.services.auth.serviceName }} 
   minReadySeconds: 10
   strategy:
     type: RollingUpdate
@@ -21,11 +21,11 @@ spec:
   template:
     metadata:
       labels:
-        app: {{ .Values.services.auth.name }} 
+        app: {{ .Values.services.auth.serviceName }} 
         component: {{ .Values.component }} 
     spec:
       containers:
-      - name: {{ .Values.services.auth.name }} 
+      - name: {{ .Values.services.auth.serviceName }} 
         image: {{ .Values.services.auth.dockerImage }}:{{ .Values.services.auth.dockerTag }} 
         env:
         - name: active_profile_env
