--- a/deployment/sandbox-v2/helm/charts/prereg/templates/ingress-svc.yaml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/ingress-svc.yaml
@@ -13,12 +13,12 @@ spec:
       port: 80
       targetPort: 80
       protocol: TCP
-      nodePort: {{ .Values.ingress.nodeportHttp }}
+      nodePort: {{ .Values.ingress.nodePortHttp }}
     - name: https
       port: 443
       targetPort: 443
       protocol: TCP
-      nodePort: {{ .Values.ingress.nodeportHttps }} 
+      nodePort: {{ .Values.ingress.nodePortHttps }} 
   selector:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
