--- a/deployment/sandbox-v2/helm/charts/prereg/templates/login-svc.yaml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/login-svc.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.services.login.name }} 
+  name: {{ .Values.services.login.serviceName }} 
   namespace: {{ .Values.namespace }} 
 spec:
   ports:
   - port: {{ .Values.services.login.servicePort }}
     targetPort: {{ .Values.services.login.containerPort }}
   selector:
-    app: {{ .Values.services.login.name }} 
+    app: {{ .Values.services.login.serviceName }} 
 
