--- a/deployment/sandbox-v2/roles/packages/helm/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/packages/helm/tasks/main.yml
@@ -1,21 +1,16 @@
 ---
-- name: "Check if Helm is installed"
-  shell: command -v helm >/dev/null 2>&1
-  register: helm_exists
-  ignore_errors: yes
+- name: "Get Helm installer"
+  unarchive:  
+    src: '{{ helm_download_url }}'
+    dest: '{{ tmp_dir }}'
+    remote_src: yes
 
-- name: "Install Helm"
-  block:
-    - name: "Get Helm installer"
-      get_url:
-        url: https://raw.githubusercontent.com/helm/helm/master/scripts/get
-        dest: "{{tmp_dir}}/get_helm.sh"
-        mode: 0755
-  
-    - name: "Run the installer"
-      shell: "{{tmp_dir}}/get_helm.sh"
-
-  when: helm_exists.rc > 0
+- name: "Copy Helm executable"
+  copy:
+    src: '{{ tmp_dir }}/linux-amd64/helm' 
+    dest: /usr/local/bin
+    mode: 0755
+  become: yes
 
 - name: "Copy yaml file"
   copy:
