[MOSIP-1124] All prereg and one more kernel service added. WIP.

--- a/deployment/sandbox-v2/helm/charts/kernel/values.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/values.yaml
@@ -16,4 +16,11 @@ services:
     containerPort: 8091
     servicePort: 80
     ingressPath: /v1/authmanager
+  masterdata:
+    serviceName: kernel-masterdata-service 
+    dockerImage: mosipid/kernel-masterdata-service
+    dockerTag: 1.0.7
+    containerPort: 8086
+    servicePort: 80
+    ingressPath: /v1/authmanager
 
