--- a/deployment/sandbox-v2/roles/config-server/files/properties/id-repository-qa.properties
+++ b/deployment/sandbox-v2/roles/config-server/files/properties/id-repository-qa.properties
@@ -9,7 +9,7 @@ mosip.idrepo.db.identity.password=Mosip@dev123
 mosip.idrepo.db.vid.db-name=mosip_idmap
 mosip.idrepo.db.vid.username=idmapuser
 mosip.idrepo.db.vid.password=Mosip@dev123
-mosip.idrepo.hdfs.username=idrepo
+mosip.idrepo.hdfs.username=idrepo-qa
 
 #----------------------------------ID Repo Service---------------------------------------------------------#
 application.id=id-repository
@@ -58,7 +58,7 @@ mosip.idrepo.encryptor.rest.httpMethod=POST
 mosip.idrepo.encryptor.rest.headers.mediaType=application/json
 mosip.idrepo.encryptor.rest.timeout=100
 
-mosip.idrepo.decryptor.rest.uri=http://krenel-cryptomanager-service/v1/cryptomanager/decrypt
+mosip.idrepo.decryptor.rest.uri=http://kernel-cryptomanager-service/v1/cryptomanager/decrypt
 mosip.idrepo.decryptor.rest.httpMethod=POST
 mosip.idrepo.decryptor.rest.headers.mediaType=application/json
 mosip.idrepo.decryptor.rest.timeout=100
@@ -92,12 +92,12 @@ mosip.idrepo.vid.policy-schema-url=${mosip.kernel.idobjectvalidator.file-storage
 mosip.idrepo.vid.policy-file-url=${mosip.kernel.idobjectvalidator.file-storage-uri}mosip-vid-policy.json
 
 #----------------------------------REST-services ----------------------------------------------------------#
-mosip.idrepo.retrieve-by-uin.rest.uri=http://id-repository-identity-service/idrepository/v1/identity/uin/{uin}
+mosip.idrepo.retrieve-by-uin.rest.uri=http://idrepo-identity-service/idrepository/v1/identity/uin/{uin}
 mosip.idrepo.retrieve-by-uin.rest.httpMethod=GET
 mosip.idrepo.retrieve-by-uin.rest.headers.mediaType=application/json
 mosip.idrepo.retrieve-by-uin.rest.timeout=100
 
-mosip.idrepo.vid-generator.rest.uri=http://id-repository-vid-service/v1/vidgenerator/vid
+mosip.idrepo.vid-generator.rest.uri=http://idrepo-vid-service/v1/vidgenerator/vid
 mosip.idrepo.vid-generator.rest.httpMethod=GET
 mosip.idrepo.vid-generator.rest.headers.mediaType=application/json
 mosip.idrepo.vid-generator.rest.timeout=100
