[MOSIP-1124] Restructuring.  Properities moved to config-repo. config-server role removed as it has been moved to Helm.

--- a/deployment/sandbox-v2/roles/config-repo/defaults/main.yml
+++ b/deployment/sandbox-v2/roles/config-repo/defaults/main.yml
@@ -1,3 +1,4 @@
+# TODO: Var values here must match the ones specified in Helm config-server
 config_repo_node_dir: /mnt/mosip_data/
 config_repo_name: config_repo  # Git repo inside above node_path
 config_repo_node_path: '{{config_repo_node_dir}}/{{config_repo_name}}'
