[MOSIP-1124] Another node added.

--- a/deployment/sandbox-v2/hosts.ini
+++ b/deployment/sandbox-v2/hosts.ini
@@ -19,6 +19,7 @@ mzmaster ansible_user=root
 [mzworkers]
 mzworker0 ansible_user=root 
 mzworker1 ansible_user=root
+mzworker2 ansible_user=root
 
 # De-Military zone (dmz) cluster
 [dmzcluster:children]
